Fix bug where grid divs are too large and overflow out of grid.

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
     background-color: white;
     display: flex;
     flex-wrap: wrap;
-    height: 50vh;
-    width: 50vh;
+    height: calc(50vh + 1px);
+    width: calc(50vh + 1px);
     border: 4px solid rgba(0, 0, 0, 0.623);
 }
 
